--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html lang="pt-br">
+  <head>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <title> velozinhas</title>
+  </head>
+  <body>
+<header>Ordem para assistir velozes e furiosos</header>
+<section>
+    <div class="chamada-texto">
+        <h1>VELOZES E FURIOSOS</h1>
+        <P>Dez filmes. Quando uma franquia alcança essa marca, seu principal desafio é vencer o cansaço: tanto o tédio dos realizadores, que imagina-se a essa altura terem explorado e aperfeiçoado tudo o que a franquia permitia, quanto a tolerância dos espectadores, cuja suspensão de descrença é posta à prova em mais uma narrativa episódica e circular justificada pelo excesso.</P>
 
-
-  
-</html>
+      <h2>clique na imagem para assistir o curta :)</h2>
+    </div>
+</section>
