--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> velozinhas</title>
   </head>
   <body>
-<header>Ordem para assistir velozes e furiosos</header>
+<header> <h1>Ordem para assistir velozes e furiosos</h1></header>
 <section>
     <div class="chamada-texto">
         <h1>VELOZES E FURIOSOS</h1>
