--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <div class="categoria-ORDEM">
       <p>Velozes e Furiosos (2001)</p>
       <a href="https://youtu.be/g5_iHh2owEc?si=SP86BTTEchT6sgdL">
-        <img src="https://img.youtube.com/vi/SP86BTTEchT6sgdL/maxresdefault.jpg">
+        <img src="https://img.youtube.com/vi/SP86BTTEchT6sgdL/maxresdefault.jpg"/>
       </a>
       <p>Velozes e Furiosos 2 (2003)</p>
       <a href="https://youtu.be/ONs4_PtakGc?si=34eWQGBD6bJVgfnb">
-        <img src="https://img.youtube.com/vi/34eWQGBD6bJVgfnb/maxresdefault.jpg">
+        <img src="https://img.youtube.com/vi/34eWQGBD6bJVgfnb/maxresdefault.jpg"/>
          </a>
       <p>Velozes e Furiosos 3 (2006)</p>
       <a href="https://youtu.be/Ao8jVb2aYdA?si=KYgLwZ65nrpYq5rU">
-        <img scr="https://img.youtube.com/vi/KYgLwZ65nrpYq5rU/maxresdefault.jpg"
+        <img scr="https://img.youtube.com/vi/KYgLwZ65nrpYq5rU/maxresdefault.jpg" />
          </a>
       
     </div>
