--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <header> <h1>Ordem para assistir velozes e furiosos</h1></header>
 <section>
     <div class="chamada-texto">
-        <h1>VELOZES E FURIOSOS</h1>
+        <h1>FAST AND FURIOUS</h1>
         <P>Dez filmes. Quando uma franquia alcança essa marca, seu principal desafio é vencer o cansaço: tanto o tédio dos realizadores, que imagina-se a essa altura terem explorado e aperfeiçoado tudo o que a franquia permitia, quanto a tolerância dos espectadores, cuja suspensão de descrença é posta à prova em mais uma narrativa episódica e circular justificada pelo excesso.</P>
       <p>Velozes e Furiosos chega a essa marca em um filme cujo apelo principal, em teoria, é encerrar a fatura. Não se trata, portanto, de trazer submarinos ou espaçonaves à mistura, mas começar a se despedir dessa família cada vez mais numerosa. É por isso que voltam os rachas dos primeiros Velozes (ainda que de forma muito modesta) e é por isso que a trama escolhida incorpora literalmente o caráter circular. Ao reencenar a ação de Velozes e Furiosos 5 para mostrar que o vilão interpretado no Rio de Janeiro por Joaquim de Almeida havia deixado um filho órfão, a franquia se fecha em si mesma e, de quebra, homenageia aquele que é o melhor filme dos dez (o cofre arrastado pelas ruas ainda arrepia).</p>
 
-      <h2>Ordem para assistir Velozes e Furiosos</h2>
+      <h2>Melhor ordem para assistir fast and furious</h2>
     </div>
 </section>
     <section> 
