--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <p>Velozes e Furiosos 4 (2009)</p>
       <a href="https://youtu.be/a9--AI3ZGaw?si=tRUo-aSs9D1jVV3x">
         <img scr="https://img.youtube.com/vi/tRUo-aSs9D1jVV3x/maxresdefault.jpg">
+        <img src="https://youtu.be/a9--AI3ZGaw?si=tRUo-aSs9D1jVV3x">
         
       </a>
       
