--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <p>Velozes e Furiosos (2001)</p>
       <a href="https://youtu.be/g5_iHh2owEc?si=SP86BTTEchT6sgdL">
         <img src="https://images.app.goo.gl/2izRhyAgRGX7RfLf7"/>
+        <img scr="https://img.youtube.com/vi/https://images.app.goo.gl/2izRhyAgRGX7RfLf7/maxresdefault.jpg" />
+        
       </a>
       <p>+Velozes +Furiosos (2003)</p>
       <a href="https://youtu.be/ONs4_PtakGc?si=34eWQGBD6bJVgfnb">
