--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="categoria-ORDEM">
       <p>Velozes e Furiosos (2001)</p>
       <a href="https://youtu.be/g5_iHh2owEc?si=SP86BTTEchT6sgdL">
-        <img scr="https://img.youtube.com/vi/g5_iHh2owEc?si=SP86BTTEchT6sgdL/maxresdefault.jpg">
+        <img scr="https://img.youtube.com/vi/SP86BTTEchT6sgdL/maxresdefault.jpg">
         
       </a>
       <p>+Velozes +Furiosos (2003)</p>
