--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="categoria-ORDEM">
       <p>Velozes e Furiosos (2001)</p>
       <a href="https://youtu.be/g5_iHh2owEc?si=SP86BTTEchT6sgdL">
-        <img scr="https://img.youtube.com/vi/SP86BTTEchT6sgdL/maxresdefault.jpg"/>
+        <img scr="https://media.fstatic.com/erHTLfaQojktDg3s1S5WNMmco2I=/322x478/smart/filters:format(webp)/media/movies/covers/2011/12/0c0bac9ac463dd53a751e39eb13ac0f5.jpg"/>
         
       </a>
       <p>+Velozes +Furiosos (2003)</p>
