--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <p>+Velozes +Furiosos (2003)</p>
       <a href="https://youtu.be/ONs4_PtakGc?si=34eWQGBD6bJVgfnb">
         <img src="https://m.media-amazon.com/images/S/pv-target-images/7f541b7ffff3a8c7de4fa7216fa25a25289bb7baca378a149dab0c654a13a3a0.jpg"/>
+        <width>50</width>
         
          </a>
       <p>Velozes e Furiosos:Desafio em Tóquio (2006)</p>
