--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="pt-br">
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Ordem para Assistir Velozes e Furiosos</title>
   </head>
   <body>
